--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <video width="640" height="360" controls>
-        <source src="output.mp4" type="video/mp4">
+        <source src="https://bucket-video-alice.s3.eu-west-3.amazonaws.com/output.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
