--- a/index.html
+++ b/index.html
@@ -4,11 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Example</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script>
+        async function downloadVideo() {
+            const videoUrl = 'https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Paris+2024.mp4';
+            const response = await fetch(videoUrl);
+            const blob = await response.blob();
+            const url = window.URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.style.display = 'none';
+            a.href = url;
+            a.download = 'Paris_2024.mp4';
+            document.body.appendChild(a);
+            a.click();
+            window.URL.revokeObjectURL(url);
+            document.body.removeChild(a);
+        }
+    </script>
 </head>
 <body>
-    <video width="640" height="360" controls>
-        <source src="https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Paris+2024.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-md">
+          <a class="navbar-brand" href="#">
+            <span>M</span><span>y</span>&nbsp;<span>m</span><span>o</span><span>m</span><span>e</span><span>n</span><span>t</span><span>s</span>&nbsp;<span>o</span><span>f</span>&nbsp;<span>l</span><span>i</span><span>f</span><span>e</span>
+          </a>
+        </div>
+    </nav>
+    <main class="d-flex flex-column align-items-center mt-4">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <video width="100%" height="auto" controls class="card-img-top">
+                    <source src="https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Paris+2024.mp4" type="video/mp4">
+                </video>
+                <div class="card-body d-flex flex-column align-items-center">
+                  <p class="card-text">Paris 2024</p>
+                  <button class="btn btn-primary md-2" onclick="downloadVideo()">Télécharger la vidéo</button>
+                </div>
+              </div>
+            </div>
+        </div>
+            <!-- <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div> -->
+    </main>
 </body>
 </html>
