--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-md">
           <a class="navbar-brand" href="#">
-            <span>M</span><span>y</span>&nbsp;<span>m</span><span>o</span><span>m</span><span>e</span><span>n</span><span>t</span><span>s</span>&nbsp;<span>o</span><span>f</span>&nbsp;<span>l</span><span>i</span><span>f</span><span>e</span>
+            <span>M</span><span>e</span><span>s</span>&nbsp;<span>m</span><span>o</span><span>m</span><span>e</span><span>n</span><span>t</span><span>s</span>&nbsp;<span>d</span><span>e</span>&nbsp;<span>v</span><span>i</span><span>e</span>
           </a>
         </div>
     </nav>
