--- a/index.html
+++ b/index.html
@@ -7,53 +7,55 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script>
-        async function downloadVideo() {
-            const videoUrl = 'https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Paris+2024.mp4';
-            const response = await fetch(videoUrl);
+        async function downloadVideo(url, filename) {
+            const response = await fetch(url);
             const blob = await response.blob();
-            const url = window.URL.createObjectURL(blob);
+            const objectURL = window.URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.style.display = 'none';
-            a.href = url;
-            a.download = 'Paris_2024.mp4';
+            a.href = objectURL;
+            a.download = filename;
             document.body.appendChild(a);
             a.click();
-            window.URL.revokeObjectURL(url);
+            window.URL.revokeObjectURL(objectURL);
             document.body.removeChild(a);
         }
     </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-md">
-          <a class="navbar-brand" href="#">
-            <span>M</span><span>e</span><span>s</span>&nbsp;<span>m</span><span>o</span><span>m</span><span>e</span><span>n</span><span>t</span><span>s</span>&nbsp;<span>d</span><span>e</span>&nbsp;<span>v</span><span>i</span><span>e</span>
-          </a>
+        <div class="container-md d-flex justify-content-center">
+            <a class="navbar-brand" href="#">
+                <span>M</span><span>e</span><span>s</span>&nbsp;<span>m</span><span>o</span><span>m</span><span>e</span><span>n</span><span>t</span><span>s</span>&nbsp;<span>d</span><span>e</span>&nbsp;<span>v</span><span>i</span><span>e</span>
+            </a>
         </div>
     </nav>
-    <main class="d-flex flex-column align-items-center mt-4">
+    <main class="container mt-4">
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
-              <div class="card h-100">
-                <video width="100%" height="auto" controls class="card-img-top">
-                    <source src="https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Paris+2024.mp4" type="video/mp4">
-                </video>
-                <div class="card-body d-flex flex-column align-items-center">
-                  <p class="card-text">Paris 2024</p>
-                  <button class="btn btn-primary md-2" onclick="downloadVideo()">Télécharger la vidéo</button>
+                <div class="card h-100">
+                    <video width="100%" height="auto" controls class="card-img-top">
+                        <source src="https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Paris+2024.mp4" type="video/mp4">
+                    </video>
+                    <div class="card-body d-flex flex-column align-items-center">
+                        <p class="card-text">Paris 2024 🇫🇷</p>
+                        <button class="btn btn-primary btn-sm" onclick="downloadVideo('https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Paris+2024.mp4', 'Paris_2024.mp4')">Télécharger la vidéo</button>
+                    </div>
                 </div>
-              </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <video width="100%" height="auto" controls class="card-img-top">
+                        <source src="https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Mauritius+2023.mp4" type="video/mp4">
+                    </video>
+                    <div class="card-body d-flex flex-column align-items-center">
+                        <p class="card-text">Ile Maurice 2023 🇲🇺</p>
+                        <button class="btn btn-primary btn-sm" onclick="downloadVideo('https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Mauritius+2023.mp4', 'Mauritius_2023.mp4')">Télécharger la vidéo</button>
+                    </div>
+                </div>
             </div>
         </div>
-            <!-- <div class="col">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
+        <!-- 
             <div class="col">
               <div class="card">
                 <img src="..." class="card-img-top" alt="...">
