--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script>
+        function showVideo(thumbnailId, videoId) {
+            document.getElementById(thumbnailId).style.display = 'none';
+            const video = document.getElementById(videoId);
+            video.style.display = 'block';
+            video.play();
+        }
+
         async function downloadVideo(url, filename) {
             const response = await fetch(url);
             const blob = await response.blob();
@@ -45,7 +52,8 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <video width="100%" height="auto" controls class="card-img-top">
+                    <img id="thumbnail2" src="miniature-ile-maurice.jpg" class="card-img-top" alt="Mauritius 2023 Thumbnail" onclick="showVideo('thumbnail2', 'video2')">
+                    <video id="video2" width="100%" height="auto" controls class="card-img-top" style="display:none;">
                         <source src="https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Mauritius+2023.mp4" type="video/mp4">
                     </video>
                     <div class="card-body d-flex flex-column align-items-center">
