change button type

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Example</title>
+    <title>Mes moments de vie</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script>
@@ -46,7 +46,9 @@
                     </video>
                     <div class="card-body d-flex flex-column align-items-center">
                         <p class="card-text">Paris 2024 🇫🇷</p>
-                        <button class="btn btn-primary btn-sm" onclick="downloadVideo('https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Paris+2024.mp4', 'Paris_2024.mp4')">Télécharger la vidéo</button>
+                        <button class="btn-download" onclick="downloadVideo('https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Paris+2024.mp4', 'Paris_2024.mp4')">
+                            <span>T</span><span>é</span><span>l</span><span>é</span><span>c</span><span>h</span><span>a</span><span>r</span><span>g</span><span>e</span><span>r</span>&nbsp;<span>l</span><span>a</span>&nbsp;<span>v</span><span>i</span><span>d</span><span>é</span><span>o</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -58,7 +60,9 @@
                     </video>
                     <div class="card-body d-flex flex-column align-items-center">
                         <p class="card-text">Ile Maurice 2023 🇲🇺</p>
-                        <button class="btn btn-primary btn-sm" onclick="downloadVideo('https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Mauritius+2023.mp4', 'Mauritius_2023.mp4')">Télécharger la vidéo</button>
+                        <button class="btn-download" onclick="downloadVideo('https://bucket-video-alice.s3.eu-west-3.amazonaws.com/Mauritius+2023.mp4', 'Mauritius_2023.mp4')">
+                            <span>T</span><span>é</span><span>l</span><span>é</span><span>c</span><span>h</span><span>a</span><span>r</span><span>g</span><span>e</span><span>r</span>&nbsp;<span>l</span><span>a</span>&nbsp;<span>v</span><span>i</span><span>d</span><span>é</span><span>o</span>
+                        </button>
                     </div>
                 </div>
             </div>
